Porting mixins sucks. Injected interfaces are neat though